# lab-bench

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  tailwind.css
.github/workflows/: rust.yml
assets/dioxus/: lab-bench.js  lab-bench_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: api.rs  main.rs
