[package]
name = "lab-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dioxus = "0.5"
dioxus-free-icons = { version = "0.8.5", features = ["font-awesome-solid"] }
dioxus-logger = "0.5"
futures = "0.3"
log = "0.4"
percent-encoding = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
timeago = "0.4"
tracing = "0.1"
web-sys = { versoin = "0.3", features = ["Window", "Navigator", "Clipboard"] }

[features]
default = ["dioxus/web", "Clipboard"]
Clipboard = ["web-sys/Clipboard"]
